<resources>
    <string name="app_name">Timbirichi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="version">Versión: </string>
    <string name="search_title">Buscar...</string>
    <string name="search_hint">Buscar...</string>
    <string name="accept">Aceptar</string>
    <string name="product_title">Anuncio: </string>
    <string name="details_mail_subject">Sobre su anuncio de Timbirichi</string>
    <string name="contact_subjecct">Sugerencia</string>
    <string name="categories">Categoría</string>
    <string name="publish">Publicar</string>
    <string name="favorites">Guardados</string>
    <string name="contact">Contactar</string>
    <string name="price">Precio: </string>
    <string name="new_product">Nuevo</string>
    <string name="used_product">Usado</string>
    <string name="views">Vistas: </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="connexion_error">Error al conectarse con el servidor.</string>
    <string name="server_error">Error en el servidor</string>
    <string name="call">Llamar</string>
    <string name="sms">Mensaje</string>
    <string name="email">Correo</string>
    <string name="the_last">Lo último</string>
    <string name="do_filter">Filtrar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="order_price">Precio</string>
    <string name="order_relevant">Relevantes</string>
    <string name="order_date">Fecha</string>
    <string name="date_bold"><b>Desde</b></string>
    <string name="filter">Filtro</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="product_detail">Detalles</string>
    <string name="contact_activity">Acerca de...</string>
    <string name="publish_activity">Publicar anuncio</string>
    <string name="clear">Limpiar</string>
    <string name="loading_cover_page">Cargando portada</string>
    <string name="cover_page">Portada</string>
    <string name="loading">Cargando...</string>
    <string name="lasted">Última</string>
    <string name="updated">Base de datos actualizada</string>
    <string name="out_date">Base de datos desactualizada</string>
    <string name="updating_database">Actualizando base de datos</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_confirm">Desea borrar los anuncios guardados?</string>
    <string name="update_database">Actualizar Base de datos</string>
    <string name="new_database">Adicionar base de datos</string>
    <string name="cats">Categorías</string>
    <string name="database_incompatible">La base de datos seleccionada es incompatible con Timbirichi, por favor seleccione otra.</string>
    <string name="database_incompatible_search">La base de datos seleccionada es incompatible con Timbirichi, por favor seleccione otra.</string>
    <string name="loading_category_error">Error cargando categorias</string>
    <string name="loading_product_error">Error cargando anuncios</string>
    <string name="banner_error">Error cargando banner</string>
    <string name="province_error">Error cargando provincias</string>
    <string name="check_reference_error">Error chequeando base de datos de anuncios guardados</string>
    <string name="copy_error">Error cargando base de datos de anuncios guardados</string>
    <string name="check_version_error">Error al chequear si existe actualización de la aplicación</string>
    <string name="has_new_version">Hay disponible una nueva actualización de timbirichi.¿Desea instalarla?</string>
    <string name="install">Instalar</string>
    <string name="select">Seleccione</string>
    <string name="extra_filter_max_range_error">El rango máximo no puede ser menor que el mínimo.</string>
    <string name="extra_filter_equals_range_error">Los valores de los rangos no pueden ser los mismos.</string>
    <string name="save_favorites_error">Error guardando el anuncio.</string>
    <string name="remove_favorites_error">Error borrando el anuncio de los anuncios guardados.</string>
    <string name="clear_favorites_error">Error eliminando los anuncios guardados.</string>
    <string name="find_favorites_error">Error buscando el auncio en los anuncios guardados.</string>
    <string name="publish_title">Titulo del anuncio</string>
    <string name="publish_category">Categoria</string>
    <string name="publish_province">Provincia</string>
    <string name="publish_price">Precio</string>
    <string name="publish_name">Su nombre</string>
    <string name="publish_phone">Su telefono</string>
    <string name="publish_email">Su correo electronico</string>
    <string name="publish_new">Nuevo</string>
    <string name="publish_description">Descripcion</string>
    <string name="publish_image">Adicionar imagen</string>
    <string name="select_image_source">Origen de la imagen</string>
    <string name="camera">Camara</string>
    <string name="gallery">Galeria de imagenes</string>
    <string name="select_an_image">Seleccione una imagen</string>
    <string name="insert_title">Debe insertar un título.</string>
    <string name="insert_category">Debe seleccionar una categoría.</string>
    <string name="insert_province">Debe seleccionar una provincia.</string>
    <string name="insert_phone">Debe insertar un número telefónico.</string>
    <string name="insert_email">Debe insertar un correo.</string>
    <string name="incorrect_email">Correo incorrecto.</string>
    <string name="incorrect_phone">Teléfono incorrecto.</string>
    <string name="insert_description">Debe insertar una descripción.</string>
    <string name="send_email">Enviar correo</string>
    <string name="api_email">anuncio@timbirichi.com</string>
    <string name="device"><b>Dispositivo:</b></string>
    <string name="app"><b>App:</b></string>
    <string name="app_version"><b>Versión App:</b></string>
    <string name="app_version_splash"><b>Versión de la aplicación</b></string>
    <string name="android_version"><b>Versión Android:</b></string>
    <string name="p_email_title"><u>Titulo del anuncio: </u></string>
    <string name="p_email_category"><b>Categoria: </b></string>
    <string name="p_email_province"><b>Provincia: </b></string>
    <string name="p_email_name"><b>Nombre: </b></string>
    <string name="p_email_email"><b>Correo: </b></string>
    <string name="p_email_description"><b>Descripcion: </b></string>
    <string name="p_email_price"><b>Precio: </b></string>
    <string name="p_email_phone"><b>Telefono: </b></string>
    <string name="p_email_isnew"><b>Nuevo: </b></string>
    <string name="app_version_error">La base de datos seleccionada no es compatible con esta versión de timbirichi, por favor descargue la última versión de la aplicación.</string>
    <string name="db_version_error">La base de datos seleccionada no es compatible con esta versión de timbirichi, por favor descargue la última base de datos.</string>
    <string name="find_in_timbirichi">Buscar en timbirichi...</string>
    <string name="find_in_favorites">Buscar en guardados...</string>
    <string name="find_in_category">Buscar en </string>
    <string name="min">Mínimo</string>
    <string name="max">Máximo</string>
    <string name="image">Imagen</string>
    <string name="no_image">Sin imagen</string>
    <string name="province">Provincia: </string>
    <string name="external_sd">Buscar en tarjeta MicroSD</string>
    <string name="internal_sd">Buscar en Almacenamiento interno</string>
    <string name="go_back">Atrás</string>
    <string name="find_database">Búsqueda Automática en el Dispositivo</string>
    <string name="download_database">Descargar mediante internet</string>
    <string name="not_databases">No se encontraron bases de datos compatibles</string>
    <string name="serching_databases">Buscando bases de datos compatibles con timbirichi en el dispositivo...</string>
    <string name="find_database_in_device">Si no recuerda la ubicación de la base de datos, puede encontrarla haciendo clic aquí</string>
    <string name="contact_phone">Telefono</string>
    <string name="contact_call">Llamar</string>
    <string name="contact_sms">Enviar sms</string>
    <string name="contact_email">Correo</string>
    <string name="contact_facebook">Facebook</string>
    <string name="contact_twitter">Twitter</string>
    <string name="contact_timbirichi">Web</string>
    <string name="timbirichi_phone">+5352459058</string>
    <string name="timbirichi_email">anuncio@timbirichi.com</string>
    <string name="timbirichi_email_contact">soporte@timbirichi.com</string>
    <string name="timbirichi_facebook">https://www.facebook.com/timbirichi.clasificados</string>
    <string name="timbirichi_twitter">http://twitter.com/timbirichi</string>
    <string name="timbirichi_web">https://www.timbirichi.com/</string>
    <string name="no_products">Su búsqueda no arrojó resultado, intente buscar nuevamente</string>
    <string name="no_favorites">Usted no tiene anuncios guardados</string>
    <string name="contact_text">   <b>Timbirichi</b>, proyecto de clasificados con el objetivo de hacer la compra venta en Cuba fácil y sencilla. Nos caracterizamos por hacer lo posible en mantener un sitio limpio, sin contenidos inadecuados o repetidos.
            Estamos en constante desarrollo para nuestros usuarios, así que, si quiere aportar alguna idea nueva, sugerencia u opinión para la aplicación o web sin duda será bienvenida. \n\n
        Nuestros contactos:
    </string>
    <string name="contact_text_2"> Si desea una promoción de más alcance y efectiva contáctenos por las siguientes vías:

    </string>
    <string name="publish_text">Si quiere que sus anuncios aparezcan en la aplicación, debe hacerlo directamente desde el sitio
        web <b>www.timbirichi.com</b>. Puede tener una sección con sus anuncios e incuso automatizarlos para que siempre sean visibles.\n\n
¿Qué esperas? ¡Únete a nuestra red!
</string>
    <string name="publish_text_2">Si desea una promoción de más alcance y efectiva contáctenos por las siguientes vías:</string>
    <string name="enter">Entrar</string>
    <string name="call_by_phone">Llamar por teléfono</string>
</resources>