<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.timbirichi.eltimbirichi.presentation.view.custom.CustomFabView
        android:id="@+id/btn_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        app:text="@string/categories"
        app:icon="@drawable/ic_categories_prod"
        app:color="@color/a_orange_400"/>

    <com.timbirichi.eltimbirichi.presentation.view.custom.CustomFabView
        android:id="@+id/btn_publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        app:text="@string/publish"
        app:icon="@drawable/ic_publish"
        app:color="@color/a_cyan_400"/>

    <com.timbirichi.eltimbirichi.presentation.view.custom.CustomFabView
        android:id="@+id/btn_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        app:text="@string/favorites"
        app:icon="@drawable/ic_saved"
        app:color="@color/a_purple_400"/>

    <com.timbirichi.eltimbirichi.presentation.view.custom.CustomFabView
        android:id="@+id/btn_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        app:text="@string/the_last"
        app:icon="@drawable/ic_lasted_new"
        app:color="@color/a_pink_400"/>
</LinearLayout>