<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.fragment.ProductFragment">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container_banner"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <com.glide.slider.library.SliderLayout
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".9"
                    custom:auto_cycle="true" />

                <com.glide.slider.library.Indicators.PagerIndicator
                    android:id="@+id/custom_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_weight=".1"
                    android:gravity="center"
                    custom:selected_color="@color/colorAccent"
                    custom:selected_height="7dp"
                    custom:selected_width="7dp"
                    custom:shape="oval"
                    custom:unselected_color="@color/gray"
                    custom:unselected_height="7dp"
                    custom:unselected_width="7dp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/products_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#fff"
            android:gravity="center">


            <com.timbirichi.eltimbirichi.presentation.view.custom.BottonBarBtnView
                android:id="@+id/bottonBarBtnView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:indicator="@drawable/ic_money"
                app:order_down="@drawable/ic_down"
                app:order_text="@string/order_price"
                app:order_up="@drawable/ic_up" />

            <com.timbirichi.eltimbirichi.presentation.view.custom.BottonBarBtnView
                android:id="@+id/bottonBarBtnView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:indicator="@drawable/ic_date"
                app:order_down="@drawable/ic_down"
                app:order_text="@string/order_date"
                app:order_up="@drawable/ic_up" />

            <com.timbirichi.eltimbirichi.presentation.view.custom.BottonBarBtnView
                android:id="@+id/bottonBarBtnView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:indicator="@drawable/ic_views"
                app:order_down="@drawable/ic_down"
                app:order_text="@string/order_relevant"
                app:order_up="@drawable/ic_up" />

            <Button
                android:id="@+id/btn_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_filter"
                android:text="@string/filter"
                android:textAllCaps="false"
                android:drawableTint="@color/a_gray_600"
                android:textColor="@color/a_gray_600" />
        </LinearLayout>
    </android.support.design.widget.BottomNavigationView>

</android.support.constraint.ConstraintLayout>